--- a/quickclick/css/style.css
+++ b/quickclick/css/style.css
@@ -302,6 +302,71 @@ input.default::placeholder {
   }
 }
 
+.the-select {
+  position: relative;
+  border: 1px solid #dbdbdb;
+  display: block;
+  border-radius: 4px;
+  position: relative;
+}
+
+.the-select::after {
+  content: "";
+  position: absolute;
+  top: calc(50% - 3.5px);
+  right: 15px;
+  display: inline-block;
+  width: 10px;
+  height: 7px;
+  background: url(../images/svg/arrow-down.svg) center center no-repeat;
+  background-size: contain;
+  font-weight: 900;
+  pointer-events: none;
+}
+
+.the-select select {
+  width: 100%;
+  height: 36px;
+  padding: 0px 32px 0px 10px;
+  font-size: 0.875rem;
+  line-height: 36px;
+  color: #333;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  text-indent: 0.01px;
+  background-color: transparent;
+  word-break: break-all;
+  text-overflow: ellipsis;
+}
+
+.the-select select::-ms-expand {
+  display: none;
+}
+
+.the-select select option::-ms-expand {
+  display: none;
+}
+
+.the-select select option {
+  -moz-appearance: none;
+  /* Firefox */
+  -webkit-appearance: none;
+  /* Safari 和 Chrome */
+  appearance: none;
+}
+
+a.reminder {
+  cursor: pointer;
+  width: 13px;
+  height: 13px;
+  display: inline-block;
+  background: url(../images/svg/reminder-green.svg) center center no-repeat no-repeat;
+}
+
+a.reminder:hover {
+  opacity: 0.8;
+}
+
 .option-list {
   position: relative;
   padding: 10px 0;
@@ -718,7 +783,7 @@ input.default::placeholder {
   }
 }
 
-.main-container a .tooltip {
+.main-container .tooltip {
   z-index: 2;
   position: absolute;
   min-width: 40px;
@@ -738,7 +803,7 @@ input.default::placeholder {
           box-shadow: rgba(0, 0, 0, 0.16) 0px 4px 15px;
 }
 
-.main-container a .tooltip::after {
+.main-container .tooltip::after {
   position: absolute;
   content: "";
   top: -7px;
@@ -1594,28 +1659,35 @@ input.default::placeholder {
 .main-container .middle-content .menu-product-info {
   float: left;
   width: 100%;
-  max-width: 400px;
-  padding: 20px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0.16) 0px 4px 15px;
-          box-shadow: rgba(0, 0, 0, 0.16) 0px 4px 15px;
+  max-width: 470px;
+  padding: 10px 20px 20px 20px;
+  -webkit-box-shadow: rgba(0, 0, 0, 0.1) -5px 0px 5px;
+          box-shadow: rgba(0, 0, 0, 0.1) -5px 0px 5px;
 }
 
 .main-container .middle-content .menu-product-info h3.product-title {
   font-size: 1rem;
-  padding: 0 13px 16px 13px;
+  padding: 16px 13px;
   font-weight: bold;
 }
 
 .main-container .middle-content .menu-product-info .set-card {
   width: 100%;
-  padding-bottom: 15px;
+  padding-bottom: 18px;
 }
 
 .main-container .middle-content .menu-product-info .set-card .top-item-title {
   background-color: #ffefd8;
   border-radius: 4px;
-  padding: 5px 15px;
   position: relative;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 3;
+}
+
+.main-container .middle-content .menu-product-info .set-card .top-item-title .title-content {
+  padding: 5px 15px;
 }
 
 .main-container .middle-content .menu-product-info .set-card .top-item-title p {
@@ -1640,9 +1712,296 @@ input.default::placeholder {
   background-size: 25%;
 }
 
+.main-container .middle-content .menu-product-info .set-card .fillin-info {
+  width: 100%;
+  padding: 10px 0;
+  display: block;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset {
+  max-width: 350px;
+  margin: 0 auto;
+  padding: 5px 0;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.note {
+  padding: 10px 0;
+  font-size: 0.688rem;
+  line-height: 15px;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .c-red {
+  color: #ff5555;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .has-error {
+  border-color: #ff5555;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .text-error {
+  position: absolute;
+  bottom: -11px;
+  right: 0;
+  background-color: #ff5555;
+  color: #fff;
+  font-size: 0.688rem;
+  padding: 2px 8px;
+  z-index: 1;
+  border-radius: 18px;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .item-title {
+  width: 75px;
+  padding-right: 15px;
+  float: left;
+  line-height: 36px;
+  text-align: right;
+  color: #666666;
+  font-size: 0.875rem;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .fillin-box {
+  position: relative;
+  float: left;
+  width: 100%;
+  max-width: calc(100% - 75px);
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.go-seting {
+  padding: 10px 0 5px 0;
+  font-size: 0.688rem;
+  text-align: left;
+  position: relative;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.go-seting a {
+  color: #f0941d;
+  text-decoration: underline;
+  text-align: left;
+  vertical-align: middle;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.go-seting a:hover {
+  text-decoration: none;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.go-seting .tooltip {
+  text-align: center;
+  padding: 7px 10px;
+  width: 100%;
+  max-width: 210px;
+  left: -73px;
+  top: 28px;
+  background-color: #000000a7;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.go-seting .tooltip::after {
+  border-color: transparent transparent #000000a7 transparent;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset input,
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset textarea {
+  width: 100%;
+  height: 36px;
+  line-height: 35px;
+  border: 1px solid #dbdbdb;
+  border-radius: 4px;
+  font-size: 0.875rem;
+  padding: 0 10px;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset input::-webkit-input-placeholder,
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset textarea::-webkit-input-placeholder {
+  color: #b5b5b5;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset input:-ms-input-placeholder,
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset textarea:-ms-input-placeholder {
+  color: #b5b5b5;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset input::-ms-input-placeholder,
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset textarea::-ms-input-placeholder {
+  color: #b5b5b5;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset input::placeholder,
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset textarea::placeholder {
+  color: #b5b5b5;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset input:focus,
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset textarea:focus {
+  border-color: #f0941d;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset textarea {
+  min-height: 100px;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .swtich-type {
+  margin-top: 6px;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .swtich-type .switchbutton {
+  display: inline-block;
+  position: relative;
+  height: 22px;
+  -webkit-user-select: none;
+  -webkit-tap-highlight-color: transparent;
+  cursor: pointer;
+  background-color: #eee;
+  border-radius: 22px;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .swtich-type .switchbutton:before {
+  content: "";
+  display: inline-block;
+  width: 42px;
+  height: 22px;
+  background-color: #fff;
+  border-radius: 22px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  border: 2px solid #eee;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .swtich-type .switchbutton:after {
+  position: absolute;
+  left: 2px;
+  top: 2px;
+  content: "";
+  display: inline-block;
+  width: 18px;
+  height: 18px;
+  background-color: #fff;
+  border-radius: 18px;
+  -webkit-transition: all 0.2s linear;
+  transition: all 0.2s linear;
+  -webkit-box-shadow: 0px 1px 3px #bbb;
+          box-shadow: 0px 1px 3px #bbb;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .swtich-type input:checked ~ .switchbutton:before {
+  background-color: #90c31f;
+  border: 1px solid #90c31f;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .swtich-type input:checked ~ .switchbutton:after {
+  left: 22px;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .swtich-type input {
+  opacity: 0;
+  position: absolute;
+  top: -4px;
+  left: 4px;
+  width: 42px;
+  height: 22px;
+  z-index: 1;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .upload-cover {
+  float: left;
+  width: 100%;
+  max-width: calc(100% - 75px);
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .upload-cover a {
+  display: block;
+  width: 150px;
+  height: 150px;
+  border-radius: 0.625rem;
+  border: 2px dashed #dbdbdb;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .upload-cover a p {
+  position: relative;
+  color: #b1b5c4;
+  padding: 45px 0 10px;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .upload-cover a p::after {
+  content: "";
+  top: 0;
+  left: calc(50% - 15px);
+  position: absolute;
+  width: 30px;
+  height: 30px;
+  display: block;
+  background: url(../images/svg/upload-gray.svg);
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .upload-cover a:hover {
+  opacity: 0.8;
+  border-color: #bfbfbf;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .upload-cover input {
+  max-width: 150px;
+  margin: 10px 0;
+}
+
 .main-container .both-content .menu-item {
   float: left;
-  width: calc(100% - 400px);
+  width: calc(100% - 470px);
+}
+
+@media all and (max-width: 1200px) {
+  .main-container .middle-content .menu-product-info {
+    max-width: 400px;
+  }
+  .main-container .both-content .menu-item {
+    width: calc(100% - 400px);
+  }
+}
+
+@media all and (max-width: 900px) {
+  .main-container .middle-content .menu-product-info {
+    max-width: 320px;
+  }
+  .main-container .both-content .menu-item {
+    width: calc(100% - 320px);
+  }
+}
+
+@media all and (max-width: 760px) {
+  .main-container .middle-content {
+    position: relative;
+  }
+  .main-container .middle-content .menu-product-info {
+    padding: 5px 15px;
+    height: 40vh;
+    left: 0;
+    bottom: 0;
+    max-width: 100%;
+    position: fixed;
+    background-color: #fff;
+    z-index: 2;
+    overflow-y: scroll;
+  }
+  .main-container .middle-content .menu-product-info .top-item-title {
+    position: -webkit-sticky;
+    position: sticky;
+    top: 0;
+  }
+  .main-container .both-content {
+    margin-bottom: 40vh;
+  }
+  .main-container .both-content .menu-item {
+    width: 100%;
+  }
 }
 
 @media all and (max-width: 600px) {
