--- a/quickclick/css/style.css
+++ b/quickclick/css/style.css
@@ -795,6 +795,7 @@ a.reminder:hover {
   color: #fff;
   -webkit-transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
   transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+  transform: scale(0.9);
   -webkit-transform: scale(0.9);
   margin: 0;
   border-radius: 0.625rem;
@@ -1438,9 +1439,8 @@ a.reminder:hover {
 
 .main-container .middle-content .menu-content .field .menu-tools {
   float: right;
-  display: inline-block;
+  display: block;
   text-align: center;
-  vertical-align: top;
 }
 
 .main-container .middle-content .menu-content .field .menu-tools a {
@@ -1519,7 +1519,6 @@ a.reminder:hover {
   background-position: center center;
   background-repeat: no-repeat;
   background-size: contain;
-  vertical-align: middle;
   cursor: pointer;
 }
 
@@ -1676,26 +1675,17 @@ a.reminder:hover {
   padding-bottom: 18px;
 }
 
-.main-container .middle-content .menu-product-info .set-card .top-item-title {
-  background-color: #ffefd8;
-  border-radius: 4px;
+.main-container .middle-content .menu-product-info .set-card .title-content {
   position: relative;
-  position: -webkit-sticky;
-  position: sticky;
-  top: 0;
-  z-index: 3;
-}
-
-.main-container .middle-content .menu-product-info .set-card .top-item-title .title-content {
   padding: 5px 15px;
 }
 
-.main-container .middle-content .menu-product-info .set-card .top-item-title p {
+.main-container .middle-content .menu-product-info .set-card .title-content p {
   line-height: 24px;
   font-size: 0.875rem;
 }
 
-.main-container .middle-content .menu-product-info .set-card .top-item-title .arr {
+.main-container .middle-content .menu-product-info .set-card .title-content .arr {
   position: absolute;
   width: 34px;
   height: 34px;
@@ -1707,9 +1697,18 @@ a.reminder:hover {
   background-size: 25%;
 }
 
-.main-container .middle-content .menu-product-info .set-card .top-item-title .arr-down {
+.main-container .middle-content .menu-product-info .set-card .title-content .arr-down {
   background: url(../images/svg/arr-down-gray.svg) center center no-repeat;
   background-size: 25%;
+}
+
+.main-container .middle-content .menu-product-info .set-card .top-item-title {
+  background-color: #ffefd8;
+  border-radius: 4px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  z-index: 3;
 }
 
 .main-container .middle-content .menu-product-info .set-card .fillin-info {
@@ -1767,25 +1766,25 @@ a.reminder:hover {
   max-width: calc(100% - 75px);
 }
 
-.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.go-seting {
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.go-setting {
   padding: 10px 0 5px 0;
   font-size: 0.688rem;
   text-align: left;
   position: relative;
 }
 
-.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.go-seting a {
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.go-setting a {
   color: #f0941d;
   text-decoration: underline;
   text-align: left;
   vertical-align: middle;
 }
 
-.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.go-seting a:hover {
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.go-setting a:hover {
   text-decoration: none;
 }
 
-.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.go-seting .tooltip {
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.go-setting .tooltip {
   text-align: center;
   padding: 7px 10px;
   width: 100%;
@@ -1795,7 +1794,7 @@ a.reminder:hover {
   background-color: #000000a7;
 }
 
-.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.go-seting .tooltip::after {
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset p.go-setting .tooltip::after {
   border-color: transparent transparent #000000a7 transparent;
 }
 
@@ -1839,14 +1838,17 @@ a.reminder:hover {
   min-height: 100px;
 }
 
-.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .swtich-type {
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .switch-type {
   margin-top: 6px;
 }
 
-.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .swtich-type .switchbutton {
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .switch-type .switch-button {
   display: inline-block;
   position: relative;
   height: 22px;
+  -moz-user-select: none;
+   -ms-user-select: none;
+       user-select: none;
   -webkit-user-select: none;
   -webkit-tap-highlight-color: transparent;
   cursor: pointer;
@@ -1854,7 +1856,7 @@ a.reminder:hover {
   border-radius: 22px;
 }
 
-.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .swtich-type .switchbutton:before {
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .switch-type .switch-button:before {
   content: "";
   display: inline-block;
   width: 42px;
@@ -1868,7 +1870,7 @@ a.reminder:hover {
   transition: all 0.2s linear;
 }
 
-.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .swtich-type .switchbutton:after {
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .switch-type .switch-button:after {
   position: absolute;
   left: 2px;
   top: 2px;
@@ -1884,16 +1886,16 @@ a.reminder:hover {
           box-shadow: 0px 1px 3px #bbb;
 }
 
-.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .swtich-type input:checked ~ .switchbutton:before {
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .switch-type input:checked ~ .switch-button:before {
   background-color: #90c31f;
   border: 1px solid #90c31f;
 }
 
-.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .swtich-type input:checked ~ .switchbutton:after {
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .switch-type input:checked ~ .switch-button:after {
   left: 22px;
 }
 
-.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .swtich-type input {
+.main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .switch-type input {
   opacity: 0;
   position: absolute;
   top: -4px;
@@ -1951,6 +1953,92 @@ a.reminder:hover {
 .main-container .middle-content .menu-product-info .set-card .fillin-info fieldset .upload-cover input {
   max-width: 150px;
   margin: 10px 0;
+  border: none;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info .additional-content {
+  border-bottom: 1px solid #dddddd;
+  padding: 5px 0;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info .additional-content .title-content p {
+  font-weight: bold;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info .additional-content .product {
+  padding: 5px 15px 0px 10px;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info .additional-content .product h4.main-title {
+  font-size: 0.875rem;
+  padding: 8px 15px;
+  font-weight: bold;
+  color: #ff9800;
+  background-color: #fffbf2;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info .additional-content .product .additional-detail {
+  padding: 8px 15px 6px 15px;
+  border-bottom: 1px dashed #dbdbdb;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info .additional-content .product .additional-detail p.sub-title {
+  float: left;
+  width: 70px;
+  padding-right: 10px;
+  line-height: 26px;
+  color: #979797;
+  font-size: 0.813rem;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info .additional-content .product .additional-detail ul {
+  float: right;
+  width: calc(100% - 70px);
+  text-align: left;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info .additional-content .product .additional-detail ul li {
+  vertical-align: top;
+  display: inline-block;
+  border: 1px solid #888888;
+  color: #888888;
+  padding: 2px 10px;
+  line-height: 20px;
+  margin: 0 3px 3px 0;
+  border-radius: 4px;
+  font-size: 0.813rem;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info .additional-content .product .additional-detail ul li.c-orange {
+  border-color: #f0941d;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info .additional-content .product .additional-detail ul li.c-orange p {
+  color: #f0941d;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info .additional-content .product .additional-detail ul li.c-lightgray {
+  border-color: #b1b5c4;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info .additional-content .product .additional-detail ul li.c-lightgray p {
+  color: #b1b5c4;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info .additional-content .product .additional-detail:last-child {
+  border: none;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info .bottom-btn-right {
+  padding: 10px 10px 0 10px;
+}
+
+.main-container .middle-content .menu-product-info .set-card .fillin-info .bottom-btn-right .btn {
+  float: right;
+  padding: 0 10px;
+  font-size: 0.688rem;
+  line-height: 30px;
+  height: 30px;
 }
 
 .main-container .both-content .menu-item {
@@ -1981,7 +2069,7 @@ a.reminder:hover {
     position: relative;
   }
   .main-container .middle-content .menu-product-info {
-    padding: 5px 15px;
+    padding: 0;
     height: 40vh;
     left: 0;
     bottom: 0;
@@ -1990,11 +2078,16 @@ a.reminder:hover {
     background-color: #fff;
     z-index: 2;
     overflow-y: scroll;
+    -webkit-box-shadow: rgba(0, 0, 0, 0.1) 0px -11px 10px;
+            box-shadow: rgba(0, 0, 0, 0.1) 0px -11px 10px;
+  }
+  .main-container .middle-content .menu-product-info h3.product-title {
+    background-color: #fffbf2;
   }
   .main-container .middle-content .menu-product-info .top-item-title {
     position: -webkit-sticky;
     position: sticky;
-    top: 0;
+    top: 48px;
   }
   .main-container .both-content {
     margin-bottom: 40vh;
@@ -2122,6 +2215,7 @@ a.reminder:hover {
   z-index: 1043;
   position: fixed;
   outline: none !important;
+  backface-visibility: hidden;
   -webkit-backface-visibility: hidden;
 }
 
@@ -2413,7 +2507,7 @@ a.reminder:hover {
 .popup-container .choose-store-list .field .option-list {
   float: left;
   width: 40px;
-  display: inline-block;
+  display: block;
 }
 
 .popup-container .choose-store-list .field .option-list input {
