--- a/jetfi_wifi_jp/css/wifi-style.css
+++ b/jetfi_wifi_jp/css/wifi-style.css
@@ -180,7 +180,7 @@ select{ appearance:none; -moz-appearance:none; -webkit-appearance:none; -ms-appe
 .main_container .travel_plan_content .area_photo .photo_01, .main_container .travel_plan_content .area_photo .photo_02{ width: 50%;}
 
 .main_container .travel_plan_content_two{ width: 100%; max-width: 1100px; margin: 0 auto 50px auto;}
-.main_container .travel_plan_content_two .plan_info{ width: 65%; float: left; padding: 35px 25px 20px 25px; position: relative; border-radius: 20px; border: 1.8px solid #333;display: block; overflow: hidden; box-shadow: 4px 4px 0 #FFAF24;}
+.main_container .travel_plan_content_two .plan_info{ width:100%; float: left; padding: 35px 25px 20px 25px; position: relative; border-radius: 20px; border: 1.8px solid #333;display: block; overflow: hidden; box-shadow: 4px 4px 0 #FFAF24;}
 .main_container .travel_plan_content_two .plan_info .show_more_info{ margin-top: 10px;}
 .main_container .travel_plan_content_two .plan_info .show_more_info h4{ font-size: 16px; font-weight: 600; border-bottom: 1.8px solid #6091CD; padding: 5px 0; position: relative;}
 .main_container .travel_plan_content_two .plan_info .show_more_info h4::before{ content: "◆"; padding-right: 5px;} 
@@ -414,7 +414,7 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 	.main_container .data_flow{ border-width: 1px; }
 	.main_container .data_flow h4 span::after{ width: 25px; right: -25px; background-image: url(../images/img_flow.png);}
 	.main_container .data_flow h4 span::before{ width: 25px; left: -25px;}
-	.main_container .tab_capacity > ul > li{min-width: initial; width: calc(98.5% / 3); padding: 5px 10px;}
+	.main_container .tab_capacity > ul > li{min-width: initial; width:33%; padding: 5px 10px;}
 	.main_container .tab_capacity > ul > li p{ font-size: 11.5px; font-weight: 600; padding-left: 16px;}
 	.main_container .tab_capacity > ul > li p::after{ width: 12px; height: 17px; left: 0px; top: 3px;}
 
@@ -528,7 +528,7 @@ footer p.copyright{padding: 1em;text-align: center;color: #fff;background-color:
 	.main_container ul.capacity_content li .capacity_img span.main_title{ font-size: 12px; min-height: 108px; }
 	.main_container .tab_capacity .tab_inner img{ width: 38px; }
 	.main_container .tab_capacity .tab_inner p.ex{ font-size: 10px; }
-    .main_container .tab_capacity > ul > li{ padding: 2px 6px; width: calc(98% / 3);}
+    .main_container .tab_capacity > ul > li{ padding: 2px 6px;}
 	.main_container .tab_capacity > ul > li p{ font-size: 9px; padding-left: 17px;}
 	.main_container .tab_capacity > ul > li p::after{left: 2px; top: 4px; width: 10px;}
 	.main_container .tab_capacity .tab_inner ul li{ width: calc(96% / 3); }
