--- a/quickclick/css/style.css
+++ b/quickclick/css/style.css
@@ -615,6 +615,16 @@ a.reminder:hover {
   margin-bottom: 15px;
 }
 
+.text-none {
+  text-align: center;
+  padding: 5px 15px 15px 15px;
+}
+
+.text-none p {
+  font-size: 0.875rem;
+  color: #555;
+}
+
 .pages {
   width: 100%;
   padding: 15px 0;
@@ -743,6 +753,11 @@ a.reminder:hover {
   font-size: 0.875rem;
 }
 
+.menu-product-info .set-card .title-content p span {
+  font-size: 0.688rem;
+  color: #666;
+}
+
 .menu-product-info .set-card .title-content .arr {
   position: absolute;
   width: 34px;
@@ -830,6 +845,10 @@ a.reminder:hover {
   max-width: calc(100% - 105px);
 }
 
+.menu-product-info .set-card .fillin-info fieldset .f-r {
+  float: right;
+}
+
 .menu-product-info .set-card .fillin-info fieldset ul.three-box li {
   float: left;
   width: 33%;
@@ -847,6 +866,34 @@ a.reminder:hover {
   max-width: calc(100% - 37px);
   padding: 0 5px;
   text-align: center;
+}
+
+.menu-product-info .set-card .fillin-info fieldset ul.add-list {
+  width: 100%;
+  text-align: left;
+  padding-top: 5px;
+}
+
+.menu-product-info .set-card .fillin-info fieldset ul.add-list li {
+  vertical-align: top;
+  display: inline-block;
+  border: 1px solid #888888;
+  color: #888888;
+  padding: 2px 10px;
+  line-height: 20px;
+  margin: 0 3px 3px 0;
+  border-radius: 4px;
+  font-size: 0.813rem;
+}
+
+.menu-product-info .set-card .fillin-info fieldset .text-note {
+  float: right;
+  width: 100%;
+  max-width: calc(100% - 105px);
+  padding: 5px 0;
+  font-size: 0.688rem;
+  line-height: 18px;
+  color: #888;
 }
 
 .menu-product-info .set-card .fillin-info fieldset p.go-setting {
@@ -1044,6 +1091,17 @@ a.reminder:hover {
 
 .menu-product-info .set-card .fillin-info .bottom-btn-right .btn {
   float: right;
+  padding: 0 10px;
+  font-size: 0.688rem;
+  line-height: 30px;
+  height: 30px;
+}
+
+.menu-product-info .set-card .fillin-info .bottom-btn-left {
+  padding: 5px 0;
+}
+
+.menu-product-info .set-card .fillin-info .bottom-btn-left .btn {
   padding: 0 10px;
   font-size: 0.688rem;
   line-height: 30px;
@@ -2553,6 +2611,11 @@ a.reminder:hover {
   padding-left: 5px;
 }
 
+.popup-container .top-title p.sub-title {
+  padding: 20px 0 0 0;
+  color: #9e9e9e;
+}
+
 .popup-container p.text-remind {
   padding: 10px 0;
   min-height: 55px;
@@ -2572,6 +2635,19 @@ a.reminder:hover {
 .popup-container p.text-remind a.icon-faq {
   padding-left: 5px;
   color: #90c31f;
+}
+
+.popup-container .bottom-btn-center {
+  text-align: center;
+}
+
+.popup-container .bottom-btn-right {
+  padding: 5px 0 10px 0;
+}
+
+.popup-container .bottom-btn-right .btn {
+  float: right;
+  padding: 0 10px;
 }
 
 .popup-container ul.choose-method {
@@ -2804,16 +2880,6 @@ a.reminder:hover {
 
 .popup-container .choose-add-group-list .selected {
   background-color: #fff;
-}
-
-.popup-container .choose-add-group-list .search-box .btn {
-  position: absolute;
-  right: 0;
-  top: 0;
-  height: 46px;
-  line-height: 46px;
-  border-radius: 0 0.25rem 0.25rem 0;
-  padding: 0 15px;
 }
 
 .popup-container .choose-add-group-list .field {
